PV_Localization: Added Infotext of Parameters

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -13050,4 +13050,13 @@
   <data name="MAVR_072" xml:space="preserve">
     <value>إدارة المحرك باستخدام التحكم في العاكس DCE مع مفتاح الأمان</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>يتم حساب الحد الأدنى للوزن المطلوب في القادوس بناءً على نقطة الوزن المحددة للدفعة.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>يُحدِّد الوزن الذي يتوقف عنده تحميل القادوس. يجب أن يتجاوز هذا الحدّ الحد الأدنى للوزن المحسوب من نقطة ضبط الدفعة.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>يقوم بتحديد عتبة الوزن التي لا يجب أن يتجاوزها القادوس، مما يؤدي إلى إطلاق إنذار في حالة اختراقها.</value>
+  </data>
 </root>
