--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -13047,4 +13047,13 @@ Hinweis: Bei Aktivierung dieses Modus kann die vorgelagerte Produktion unterbroc
   <data name="MAVR_072" xml:space="preserve">
     <value>Motormanagement mit DCE-Wechselrichtersteuerung und Sicherheitsschlüssel</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>Das im Trichter erforderliche Mindestgewicht wird auf Basis des für die Charge gewählten Sollgewichts berechnet.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Definiert das Gewicht, bei dem die Beladung des Trichters gestoppt wird. Dieser Grenzwert muss das aus dem Chargen-Sollwert berechnete Mindestgewicht überschreiten.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Definiert die Gewichtsschwelle, die der Trichter nicht überschreiten darf; bei Überschreitung wird ein Alarm ausgelöst.</value>
+  </data>
 </root>
