--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -13044,4 +13044,13 @@ Nota: Si se activa este modo, la producción previa podría suspenderse.</value>
   <data name="MAVR_072" xml:space="preserve">
     <value>Gestión de motores con control de inversor DCE con llave de seguridad</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>El peso mínimo requerido en la tolva se calcula en función del punto de ajuste de peso seleccionado para el lote.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Define el peso a partir del cual se detiene la carga de la tolva. Este límite debe superar el peso mínimo calculado a partir del punto de ajuste del lote.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Define el umbral de peso que la tolva no debe superar, activando una alarma si se sobrepasa dicho límite.</value>
+  </data>
 </root>
