--- a/Prevu.Localization/Properties/Resources.fr.resx
+++ b/Prevu.Localization/Properties/Resources.fr.resx
@@ -13045,4 +13045,13 @@ Remarque : Si ce mode est activé, la production en amont peut être suspendue.
   <data name="MAVR_072" xml:space="preserve">
     <value>Gestion moteur avec variateur de fréquence DCE et clé de sécurité</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>Le poids minimum requis dans la trémie est calculé en fonction du point de consigne de poids sélectionné pour le lot.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Définit le poids auquel le chargement de la trémie s'arrête. Cette limite doit être supérieure au poids minimal calculé à partir du point de consigne du lot.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Définit le seuil de poids que la trémie ne doit pas dépasser, déclenchant une alarme en cas de dépassement.</value>
+  </data>
 </root>
