--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -13044,4 +13044,13 @@
   <data name="MAVR_072" xml:space="preserve">
     <value>ניהול מנוע עם בקרת ממיר DCE עם מפתח בטיחות</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>המשקל המינימלי הנדרש במיכל מחושב על סמך נקודת המשקל שנבחרה עבור האצווה.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>מגדיר את המשקל שבו טעינת המיכל נעצרת. מגבלה זו חייבת לעלות על המשקל המינימלי המחושב מנקודת הקביעה של האצווה.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>מגדיר את סף המשקל שהמיכל לא יכול לחרוג ממנו, ומפעיל אזעקה אם הוא מופר.</value>
+  </data>
 </root>
