--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -13044,4 +13044,13 @@ Nota: se questa modalità è attivata, la produzione a monte potrebbe essere sos
   <data name="MAVR_072" xml:space="preserve">
     <value>Gestione motore con controllo inverter DCE con chiave di sicurezza</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>Il peso minimo richiesto nella tramoggia viene calcolato in base al punto di riferimento del peso selezionato per il lotto.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Definisce il peso al quale si arresta il caricamento della tramoggia. Questo limite deve essere superiore al peso minimo calcolato dal setpoint del batch.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Definisce la soglia di peso che la tramoggia non deve superare, attivando un allarme in caso di superamento.</value>
+  </data>
 </root>
