--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -13044,4 +13044,13 @@ Opmerking: Als deze modus is geactiveerd, kan de upstream-productie worden opges
   <data name="MAVR_072" xml:space="preserve">
     <value>Motormanagement met DCE-omvormerbesturing met veiligheidssleutel</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>Het minimale gewicht dat in de trechter nodig is, wordt berekend op basis van het geselecteerde gewichtsinstelpunt voor de batch.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Definieert het gewicht waarbij het laden van de hopper stopt. Deze limiet moet hoger zijn dan het minimumgewicht dat is berekend op basis van de batch-setpoint.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Definieert de gewichtsdrempel die de trechter niet mag overschrijden. Bij overschrijding hiervan wordt een alarm geactiveerd.</value>
+  </data>
 </root>
