--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -13044,4 +13044,13 @@ Observação: Se este modo estiver ativado, a produção a montante poderá ser 
   <data name="MAVR_072" xml:space="preserve">
     <value>Gerenciamento de motor com controle de inversor DCE com chave de segurança</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>O peso mínimo necessário na tremonha é calculado com base no ponto de ajuste de peso selecionado para o lote.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Define o peso no qual o carregamento da tremonha é interrompido. Esse limite deve ser superior ao peso mínimo calculado a partir do ponto de ajuste do lote.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Define o limite de peso que a tremonha não deve ultrapassar, acionando um alarme caso esse limite seja excedido.</value>
+  </data>
 </root>
