--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -13782,4 +13782,16 @@ Note: If this mode is activated, upstream production may be suspended.</value>
     <value>Motor Management with DCE Inverter Control with safety key</value>
     <comment>FC_DESCR</comment>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>The minimum weight required in the hopper is calculated based on the selected weight setpoint for the batch.</value>
+    <comment>InfoText Parameter</comment>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Defines the weight at which hopper loading stops. This limit must exceed the minimum weight calculated from the batch setpoint.</value>
+    <comment>InfoText Parameter</comment>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Defines the weight threshold that the hopper must not exceed, triggering an alarm if breached.</value>
+    <comment>InfoText Parameter</comment>
+  </data>
 </root>
