--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -13044,4 +13044,13 @@ Notă: Dacă acest mod este activat, producția din amonte poate fi suspendată.
   <data name="MAVR_072" xml:space="preserve">
     <value>Managementul motorului cu control al invertorului DCE cu cheie de siguranță</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>Greutatea minimă necesară în buncăr este calculată pe baza valorii de referință a greutății selectate pentru lot.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Definește greutatea la care încărcarea buncărului se oprește. Această limită trebuie să depășească greutatea minimă calculată din valoarea de referință a lotului.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Definește pragul de greutate pe care buncărul nu trebuie să îl depășească, declanșând o alarmă în caz de depășire.</value>
+  </data>
 </root>
