--- a/Prevu.Localization/Properties/Resources.sl.resx
+++ b/Prevu.Localization/Properties/Resources.sl.resx
@@ -13044,4 +13044,13 @@ Opomba: če je ta način aktiviran, je proizvodnja na zgornjem delu verige lahko
   <data name="MAVR_072" xml:space="preserve">
     <value>Upravljanje motorja z inverterskim krmiljenjem DCE z varnostnim ključem</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>Najmanjša teža, ki jo je treba napolniti v lijaku, se izračuna na podlagi izbrane nastavljene teže za serijo.</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>Določa težo, pri kateri se polnjenje lijaka ustavi. Ta omejitev mora presegati minimalno težo, izračunano iz nastavljene vrednosti serije.</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>Določa prag teže, ki ga zalogovnik ne sme preseči, in v primeru kršitve sproži alarm.</value>
+  </data>
 </root>
