--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -13044,4 +13044,13 @@
   <data name="MAVR_072" xml:space="preserve">
     <value>采用带安全钥匙的DCE变频器控制电机管理系统</value>
   </data>
+  <data name="P_WH_SCALE_MIN" xml:space="preserve">
+    <value>料斗中所需的最小重量是根据为该批次选择的重量设定值计算得出的。</value>
+  </data>
+  <data name="P_WH_SCALE_SP" xml:space="preserve">
+    <value>定义料斗停止装料的重量。此限值必须超过根据批次设定点计算出的最小重量。</value>
+  </data>
+  <data name="P_WH_SCALE_LSH" xml:space="preserve">
+    <value>定义料斗重量不得超过的阈值，如果超过阈值则触发警报。</value>
+  </data>
 </root>
